--- a/avia/src/components/search/search.module.scss
+++ b/avia/src/components/search/search.module.scss
@@ -45,8 +45,8 @@
   input {
     border: none;
     width: 104px;
-    color: #b7bac1;
-    opacity: 0.5;
+    color: #2a2a2a;
+    opacity: 0.8;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
