--- a/avia/src/components/search/search.module.scss
+++ b/avia/src/components/search/search.module.scss
@@ -1,6 +1,7 @@
 .search-box {
-  width: 962px;
+  max-width: 1062px;
   margin: 68px auto;
+  padding: 50px;
   border: 1px solid transparent;
   border-radius: 10px;
 }
@@ -26,6 +27,7 @@
   }
 }
 .search-field-input {
+  position: relative;
   svg {
     margin-right: 8px;
     transform: translateY(3px);
@@ -83,4 +85,22 @@
   border-radius: 10px;
   padding: 10px 32px;
   border: 1px solid transparent;
+}
+
+@media (max-width: 1060px) {
+  .search-fields {
+    flex-direction: column;
+  }
+  .search-upper-part {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .search-bottom-part {
+    padding-left: 0px;
+    padding-right: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
